@startuml domain_model
skinparam ranksep 3.7
' -------------------
' DOMAIN MODEL
' -------------------

class User {
    - email : string
    - password : string
    - accountType : string
}

class Artist {
    - firstName : string
    - lastName : string
    - bio : string
    - style : string
}

class Product {
    - title : string
    - secretPrice : double
    - currency : string
    - imageUrl : string
    - isSold : boolean
}

class Address {
    - firstName : string
    - lastName : string
    - email : string
    - mobileNr : string
    - country : string
    - postalCode : string
    - city : string
    - address1 : string
    - address2 : string
}

class Order {
    - orderDate : date
    - orderStatus : string
}

class OrderItem {
    - priceAtPurchase : double
}

' -------------------
' RELATIONSHIPS
' -------------------
Artist -right-|> User : extends
User "0..1" -- "0..*" Order : places
User "1" -- "0..*" Address : has
Order "1" -right- "1" Address : shipsTo
Artist "1" -down- "0..*" Product : creates
Order "1" -down- "1..*" OrderItem : contains
OrderItem "1" -up- "1" Product : references


@enduml
